fix: responsive issues like font size spacing

--- a/public/responsive.css
+++ b/public/responsive.css
@@ -3,16 +3,22 @@
         padding: 60px 0px;
     }
     .swiper-container-horizontal>.swiper-pagination-bullets{
-        bottom: -30px;
+        bottom: -40px;
     }
     .swiper-button-prev,
     .swiper-button-next{
-        bottom: -40px;
+        bottom: -50px;
+    }
+    .section-padding.instructor-section {
+      padding-bottom: 120px;
     }
 }
 @media (max-width:767px) {
   .section-padding {
     padding: 40px 0px;
+  }
+  .section-padding.instructor-section {
+    padding-bottom: 90px;
   }
 }
 @media (max-width:525px) {
